--- a/.gitignore
+++ b/.gitignore
@@ -1,37 +1,31 @@
-# Local .terraform directories
-.terraform/
+# --- Terraform Specific ---
+**/*.tfvars
+**/*.tfvars.json
 
-# .tfstate files
-*.tfstate
-*.tfstate.*
+# Ignora estados e binários em qualquer nível
+**/*.tfstate
+**/*.tfstate.*
+**/.terraform/
+**/.terraform.lock.hcl
 
-# Crash log files
-crash.log
-crash.*.log
+# Arquivos que você quer manter apenas localmente
+**/backend.tf
+**/data.tf
 
-# Exclude all .tfvars files, which are likely to contain sensitive data, such as
-# password, private keys, and other secrets. These should not be part of version 
-# control as they are data points which are potentially sensitive and subject 
-# to change depending on the environment.
-*.tfvars
-*.tfvars.json
+# --- OCI / Networking Rules ---
+**/route_rules_private.json
+**/route_rules_public.json
 
-# Ignore override files as they are usually used to override resources locally and so
-# are not checked in
-override.tf
-override.tf.json
-*_override.tf
-*_override.tf.json
+# --- Kubernetes / Secrets ---
+**/certificate.yaml
+**/clusterissuer.yaml
+**/secrets.yaml
 
-# Ignore transient lock info files created by terraform apply
-.terraform.tfstate.lock.info
+# --- OS / IDE ---
+.DS_Store
+**/.vscode/
+**/.idea/
 
-# Include override files you do wish to add to version control using negated pattern
-# !example_override.tf
-
-# Include tfplan files to ignore the plan output of command: terraform plan -out=tfplan
-# example: *tfplan*
-
-# Ignore CLI configuration files
-.terraformrc
-terraform.rc
+# Chaves privadas
+**/*.pem
+**/*.key
