--- a/kubernetes/ingress.yaml
+++ b/kubernetes/ingress.yaml
@@ -5,6 +5,8 @@ metadata:
   namespace: jpncloud
   annotations:
     kubernetes.io/ingress.class: "nginx"
+    service.beta.kubernetes.io/oci-load-balancer-shape: "10Mbps"
+    service.beta.kubernetes.io/oci-load-balancer-internal: "false"
     cert-manager.io/cluster-issuer: "letsencrypt-prod"
 spec:
   tls:
@@ -19,6 +21,6 @@ spec:
             pathType: Prefix
             backend:
               service:
-                name: simulado-lb
+                name: simulado-service
                 port:
                   number: 80
